Add ErrandCard, Navbar, Login and Signup page, Main page, New Errand page

--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,22 @@
-body {
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200;300;400;500;600;700;800;900&display=swap');
+* {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+body {
+  font-family: 'Montserrat', sans-serif;
+}
+
+.btn-dark {
+  background-color: #5c8bc2;
+  border-color: #5c8bc2;
+}
+
+.btn-dark:hover {
+  background-color: #2b72c4;
+  border-color: #2b72c4;
+}
+
+.card-img {
+  max-width: 300px;
 }
