--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,22 +1,42 @@
-@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200;300;400;500;600;700;800;900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Mulish:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;1,200;1,300&display=swap');
 * {
   margin: 0;
 }
 
 body {
-  font-family: 'Montserrat', sans-serif;
+  font-family: 'Mulish', sans-serif;
 }
 
 .btn-dark {
-  background-color: #5c8bc2;
-  border-color: #5c8bc2;
+  background-color: #435A7D;
+  border-color: #435A7D;
 }
 
 .btn-dark:hover {
-  background-color: #2b72c4;
-  border-color: #2b72c4;
+  background-color: #769fbb;
+  border-color: #769fbb;
 }
 
 .card-img {
   max-width: 300px;
+}
+
+.logo {
+  color: #435A7D;
+}
+
+.main-illu {
+  display: inline;  
+}
+
+.intro-text {
+  display: inline;
+}
+
+.intro-container{
+  display: block;
+}
+
+.container {
+  display: block;
 }
